module/Az-Firewall/main_fw_rules.tf
# Autogenerated file, see mustache folder if you want to overwrite this file

####
# Network Rule Collection
####
resource "azurerm_firewall_nat_rule_collection" "sec_common_services-ncol1" {
  name                = "sec_common_services-ncol1"
  azure_firewall_name = "${azurerm_firewall.fw.name}"
  resource_group_name = "${azurerm_firewall.fw.resource_group_name}"
  priority            = 200
  action              = "Dnat"

  rule {
    name                  = "rdg-rule1"
    source_addresses      = ["*"]
    destination_ports     = ["3389"]
    destination_addresses = ["40.66.63.194"]
    protocols             = ["TCP"]
    translated_address    = "192.168.2.228"
    translated_port       = "3389"
  }

}

####
# Network Rule Collection
####
resource "azurerm_firewall_network_rule_collection" "infra_common_services-ncol1" {
  name                = "infra_common_services-ncol1"
  azure_firewall_name = "${azurerm_firewall.fw.name}"
  resource_group_name = "${azurerm_firewall.fw.resource_group_name}"
  priority            = 100
  action              = "Allow"

  rule {
    name                  = "dns-rule1"
    source_addresses      = ["198.18.2.0/24"]
    destination_ports     = ["53"]
    destination_addresses = ["*"]
    protocols             = ["TCP", "UDP"]
  }

}

####
# Network Rule Collection
####
resource "azurerm_firewall_network_rule_collection" "sec_common_services-ncol1" {
  name                = "sec_common_services-ncol1"
  azure_firewall_name = "${azurerm_firewall.fw.name}"
  resource_group_name = "${azurerm_firewall.fw.resource_group_name}"
  priority            = 200
  action              = "Allow"

  rule {
    name                  = "sampe-rule1"
    source_addresses      = ["198.18.2.1/32"]
    destination_ports     = ["53"]
    destination_addresses = ["*"]
    protocols             = ["TCP", "UDP"]
  }

}

####
# Network Rule Collection
####
resource "azurerm_firewall_network_rule_collection" "apps_common_services-ncol1" {
  name                = "apps_common_services-ncol1"
  azure_firewall_name = "${azurerm_firewall.fw.name}"
  resource_group_name = "${azurerm_firewall.fw.resource_group_name}"
  priority            = 300
  action              = "Allow"

  rule {
    name                  = "sampe-rule1"
    source_addresses      = ["198.18.2.1/32"]
    destination_ports     = ["53"]
    destination_addresses = ["*"]
    protocols             = ["TCP", "UDP"]
  }

}

####
# Network Rule Collection
####
resource "azurerm_firewall_network_rule_collection" "bounce_common_services-ncol1" {
  name                = "bounce_common_services-ncol1"
  azure_firewall_name = "${azurerm_firewall.fw.name}"
  resource_group_name = "${azurerm_firewall.fw.resource_group_name}"
  priority            = 400
  action              = "Allow"

  rule {
    name                  = "sampe-rule1"
    source_addresses      = ["198.18.2.1/32"]
    destination_ports     = ["53"]
    destination_addresses = ["*"]
    protocols             = ["TCP", "UDP"]
  }

}

####
# Network Rule Collection
####
resource "azurerm_firewall_network_rule_collection" "apps_services-ncol1" {
  name                = "apps_services-ncol1"
  azure_firewall_name = "${azurerm_firewall.fw.name}"
  resource_group_name = "${azurerm_firewall.fw.resource_group_name}"
  priority            = 1000
  action              = "Allow"

  rule {
    name                  = "sampe-rule1"
    source_addresses      = ["198.18.2.1/32"]
    destination_ports     = ["53"]
    destination_addresses = ["*"]
    protocols             = ["TCP", "UDP"]
  }

}

####
# Application Rule Collection
####
resource "azurerm_firewall_application_rule_collection" "infra_common_services-acol1" {
  name                = "infra_common_services-acol1"
  azure_firewall_name = "${azurerm_firewall.fw.name}"
  resource_group_name = "${azurerm_firewall.fw.resource_group_name}"
  priority            = 100
  action              = "Allow"

  rule {
    name             = "AllAzureTags-rule1"
    source_addresses = ["198.18.2.0/24"]
    fqdn_tags        = ["MicrosoftActiveProtectionService", "WindowsDiagnostics", "WindowsUpdate", "AppServiceEnvironment", "AzureBackup"]
  }
  rule {
    name             = "OsMgmt-rule1"
    source_addresses = ["198.18.2.0/24"]
    target_fqdns     = ["google.com","debian.anexia.at","debian.asis.io","debian.balt.net","debian.bhs.mirrors.ovh.net","debian.blizoo.mk","debian.bononia.it","debian.c3sl.ufpr.br","debian.carnet.hr","debian.cc.lehigh.edu","debian.charite.de","debian.co.il","debian.connesi.it","debian.cs.binghamton.edu","debian.csail.mit.edu","debian.cse.msu.edu"]

      protocol {
        port =  443
        type =  "Https"
      }
      protocol {
        port =  80
        type =  "Http"
      }
  }
}

####
# Application Rule Collection
####
resource "azurerm_firewall_application_rule_collection" "sec_common_services-acol1" {
  name                = "sec_common_services-acol1"
  azure_firewall_name = "${azurerm_firewall.fw.name}"
  resource_group_name = "${azurerm_firewall.fw.resource_group_name}"
  priority            = 200
  action              = "Allow"

  rule {
    name             = "sample-rule1"
    source_addresses = ["*"]
    target_fqdns     = ["*.mydomain.com"]

      protocol {
        port =  443
        type =  "Https"
      }
  }
}

####
# Application Rule Collection
####
resource "azurerm_firewall_application_rule_collection" "apps_common_services-acol1" {
  name                = "apps_common_services-acol1"
  azure_firewall_name = "${azurerm_firewall.fw.name}"
  resource_group_name = "${azurerm_firewall.fw.resource_group_name}"
  priority            = 300
  action              = "Allow"

  rule {
    name             = "sample-rule1"
    source_addresses = ["*"]
    target_fqdns     = ["*.mydomain.com"]

      protocol {
        port =  443
        type =  "Https"
      }
  }
}

####
# Application Rule Collection
####
resource "azurerm_firewall_application_rule_collection" "bounce_common_services-acol1" {
  name                = "bounce_common_services-acol1"
  azure_firewall_name = "${azurerm_firewall.fw.name}"
  resource_group_name = "${azurerm_firewall.fw.resource_group_name}"
  priority            = 400
  action              = "Allow"

  rule {
    name             = "sample-rule1"
    source_addresses = ["*"]
    target_fqdns     = ["*.mydomain.com"]

      protocol {
        port =  443
        type =  "Https"
      }
  }
}

####
# Application Rule Collection
####
resource "azurerm_firewall_application_rule_collection" "apps_services-acol1" {
  name                = "apps_services-acol1"
  azure_firewall_name = "${azurerm_firewall.fw.name}"
  resource_group_name = "${azurerm_firewall.fw.resource_group_name}"
  priority            = 1000
  action              = "Allow"

  rule {
    name             = "sample-rule1"
    source_addresses = ["*"]
    target_fqdns     = ["*.mydomain.com"]

      protocol {
        port =  443
        type =  "Https"
      }
  }
}

####
